feat(core): Finalisation flux E2E, Auth Remote et Synchro Users
- AUTH: Correction du Token Relay dans WebClient et JwtAuthManager (fix 401).
- SYNC: Implémentation de la synchronisation complète Users/Roles/Actors pour intégrité FK.
- PERSISTENCE: Fix R2DBC 'save' pour Ride et Role (Gestion Persistable/isNew).
- API: Ajout du endpoint GET /offers/{id}/ride pour la découverte client.
- REFACTOR: Adaptation du DTO UserResponse pour supporter plusieurs rôles.
- RESILIENCE: Validation du fallback FareCalculator en cas d'erreur remote.