@@ -1,7 +1,6 @@
 package com.yowyob.rideandgo.infrastructure.adapters.inbound.rest;
 
 import com.yowyob.rideandgo.application.utils.Utils;
-import com.yowyob.rideandgo.domain.model.Role;
 import com.yowyob.rideandgo.domain.model.User;
 import com.yowyob.rideandgo.domain.model.enums.RoleType;
 import com.yowyob.rideandgo.domain.ports.in.UserUseCases;
@@ -9,6 +8,13 @@ import com.yowyob.rideandgo.domain.ports.out.RoleRepositoryPort;
 import com.yowyob.rideandgo.infrastructure.adapters.inbound.rest.dto.CreateUserRequest;
 import com.yowyob.rideandgo.infrastructure.adapters.inbound.rest.dto.UserResponse;
 import com.yowyob.rideandgo.infrastructure.mappers.UserMapper;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -20,13 +26,7 @@ import reactor.core.publisher.Mono;
 import java.util.Collections;
 import java.util.Set;
 import java.util.UUID;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -44,7 +44,7 @@ public class UserController {
      */
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    @Operation(summary = "Create a user", description = "Creates a new user with a specified role type")
+    @Operation(summary = "Create a user", description = "Creates a new user with a specified role type", hidden = true)
     @ApiResponses({
             @ApiResponse(responseCode = "201", description = "User created", content = @Content(schema = @Schema(implementation = UserResponse.class))),
             @ApiResponse(responseCode = "400", description = "Invalid input data")
@@ -62,20 +62,13 @@ public class UserController {
                             .email(request.getEmail())
                             .telephone(request.getTelephone())
                             .password(passwordEncoder.encode(request.getPassword()))
-                            .roles(Set.of(role)) // Wrap role in a Set for the new RBAC domain model
-                            .directPermissions(Collections.emptySet()) // Initialize empty direct permissions
+                            .roles(Set.of(role)) 
+                            .directPermissions(Collections.emptySet())
                             .build();
 
                     return userUseCases.saveUser(userToSave);
                 })
-                .map(savedUser -> {
-                    UserResponse response = userMapper.toResponse(savedUser);
-                    // Map the first role type back to the DTO for the frontend
-                    if (!savedUser.roles().isEmpty()) {
-                        response.setRole(savedUser.roles().iterator().next().type());
-                    }
-                    return response;
-                });
+                .map(this::mapToResponse); 
     }
 
     /**
@@ -92,14 +85,7 @@ public class UserController {
         log.info("Fetching user details for id: {}", userId);
         
         return userUseCases.getUserById(userId)
-                .map(user -> {
-                    UserResponse response = userMapper.toResponse(user);
-                    // Set the primary role type in the DTO
-                    if (user.roles() != null && !user.roles().isEmpty()) {
-                        response.setRole(user.roles().iterator().next().type());
-                    }
-                    return response;
-                });
+                .map(this::mapToResponse); 
     }
 
     /**
@@ -115,20 +101,14 @@ public class UserController {
         
         Flux<User> userFlux = (role != null) ? userUseCases.getUsersByRole(role) : userUseCases.getAllUsers();
 
-        return userFlux.map(user -> {
-            UserResponse response = userMapper.toResponse(user);
-            if (user.roles() != null && !user.roles().isEmpty()) {
-                response.setRole(user.roles().iterator().next().type());
-            }
-            return response;
-        });
+        return userFlux.map(this::mapToResponse); 
     }
 
     /**
      * Deletes a user from the system.
      */
     @DeleteMapping("/{id}")
-    @Operation(summary = "Delete user", description = "Permanently delete a user by its UUID")
+    @Operation(summary = "Delete user", description = "Permanently delete a user by its UUID", hidden = true)
     @ApiResponses({
             @ApiResponse(responseCode = "200", description = "User successfully deleted"),
             @ApiResponse(responseCode = "404", description = "User not found")
@@ -137,5 +117,18 @@ public class UserController {
             @Parameter(description = "User identifier", required = true) @PathVariable UUID id) {
         log.info("Deleting user with id: {}", id);
         return userUseCases.deleteUserById(id);
+    }
+
+    // --- Helper Unique pour Mapper les Rôles ---
+    private UserResponse mapToResponse(User user) {
+        UserResponse response = userMapper.toResponse(user);
+        
+        if (user.roles() != null) {
+            // Conversion Set<Role> vers List<RoleType>
+            response.setRoles(user.roles().stream()
+                    .map(com.yowyob.rideandgo.domain.model.Role::type)
+                    .collect(Collectors.toList()));
+        }
+        return response;
     }
 }
